<resources>
    <string name="adyen.submitButton">AUTHORISE TRANSACTION</string>
    <string name="adyen.submitButton.formatted">AUTHORISE TRANSACTION</string>
    <string name="bt_add_card">@string/adyen.submitButton</string>
    <string name="continue_button">Next</string>
    <string name="K0001">General request error</string>
    <string name="K0002">Invalid request payload</string>
    <string name="K0003">Could not read authorisation token</string>
    <string name="K0004">Authentication is required for this path</string>
    <string name="K0005">Missing required role for this request</string>
    <string name="K0006">Rate limit exceeded</string>
    <string name="K0007">Circuit breaker has triggered for this route</string>
    <string name="K1001">Could not register user</string>
    <string name="K1003">Could not register user (invalid request)</string>
    <string name="K1004">Could not register user (invalid phone number)</string>
    <string name="K1005">Could not get user details (invalid token)</string>
    <string name="K1006">Could not get user details (user does not exist)</string>
    <string name="K2001">Could not get address</string>
    <string name="K3001">Could not get estimates</string>
    <string name="K3003">Could not get estimates (could not find specified quote)</string>
    <string name="K4001">Could not book trip</string>
    <string name="K4002">Could not book trip - invalid request payload (require at least 1 set of passenger-details)</string>
    <string name="K4003">Could not book trip (could not find specified quote)</string>
    <string name="K4004">Could not book trip (attempt to book an expired quote)</string>
    <string name="K4005">Could not book trip (permission denied)</string>
    <string name="K4006">Could not book trip (payment pre-authorisation failed)</string>
    <string name="K4007">Could not cancel trip</string>
    <string name="K4008">Could not cancel trip (could not find specified trip)</string>
    <string name="K4009">Could not cancel trip (permission denied)</string>
    <string name="K4010">Could not cancel trip (already cancelled)</string>
    <string name="K4011">Could not get trip</string>
    <string name="K4012">Could not get trip (could not find specified trip)</string>
    <string name="K4013">Could not get trip (permission denied)</string>
    <string name="K4014">Could not book trip as agent</string>
    <string name="K4018">Could not book trip as this quote is no longer available</string>
    <string name="K4020">Could not book trip with the selected DMS</string>
    <string name="K5001">Could not get estimates</string>
    <string name="K5002">Could not get availability (no availability found within requested area)</string>
    <string name="K5003">Could not get availability (no categories found within requested area)</string>
    <string name="kh_uisdk_about">About</string>
    <string name="kh_uisdk_acc_close_button">Close the screen</string>
    <string name="kh_uisdk_acc_destination_address">Destination address</string>
    <string name="kh_uisdk_acc_loyalty_information">Information</string>
    <string name="kh_uisdk_acc_pickup_address">Departure address</string>
    <string name="kh_uisdk_acc_pickup_time">Pick-up time</string>
    <string name="kh_uisdk_acc_ride_details">Go to ride details</string>
    <string name="kh_uisdk_accessibility_button_map_locate_me">Locate me</string>
    <string name="kh_uisdk_accessibility_checkbox_hint_terms_and_conditions">Double tap to toggle</string>
    <string name="kh_uisdk_accessibility_checkbox_label_terms_and_conditions">Terms and conditions</string>
    <string name="kh_uisdk_accessibility_icon_back">Back icon</string>
    <string name="kh_uisdk_accessibility_icon_comments">Comments</string>
    <string name="kh_uisdk_accessibility_icon_cross">Cross icon</string>
    <string name="kh_uisdk_accessibility_icon_economy">Economy</string>
    <string name="kh_uisdk_accessibility_icon_edit_arrow">Edit</string>
    <string name="kh_uisdk_accessibility_icon_electric">Electric</string>
    <string name="kh_uisdk_accessibility_icon_flight_number">Flight number</string>
    <string name="kh_uisdk_accessibility_icon_hybrid">Hybrid</string>
    <string name="kh_uisdk_accessibility_icon_passenger">Passenger</string>
    <string name="kh_uisdk_accessibility_icon_train_number">Train number</string>
    <string name="kh_uisdk_accessibility_label_comments">Add a comment</string>
    <string name="kh_uisdk_accessibility_label_delete_entry">Delete address</string>
    <string name="kh_uisdk_accessibility_label_drop_off_address">Drop off address</string>
    <string name="kh_uisdk_accessibility_label_fleet_name">Fleet name</string>
    <string name="kh_uisdk_accessibility_label_flight_number">Flight number</string>
    <string name="kh_uisdk_accessibility_label_map_driver_pin">Driver pin icon</string>
    <string name="kh_uisdk_accessibility_label_map_dropoff_pin">Destination pin icon</string>
    <string name="kh_uisdk_accessibility_label_map_pickup_pin">Departure pin icon</string>
    <string name="kh_uisdk_accessibility_label_passenger">Passenger</string>
    <string name="kh_uisdk_accessibility_label_pickup_address">Pick-up address</string>
    <string name="kh_uisdk_accessibility_label_quote_card">Quote card</string>
    <string name="kh_uisdk_accessibility_label_swap_addresses">Swap addresses</string>
    <string name="kh_uisdk_accessibility_label_train_number">Train number</string>
    <string name="kh_uisdk_accessibility_loyalty_switch_disabled">Button status: Earning points  - double tap to use your points</string>
    <string name="kh_uisdk_accessibility_loyalty_switch_enabled">Button status: using points - double tap to earn points</string>
    <string name="kh_uisdk_add_card">Add card</string>
    <string name="kh_uisdk_add_comment_placeholder">Additional comments</string>
    <string name="kh_uisdk_add_flight_details">Flight number (Optional)</string>
    <string name="kh_uisdk_additional_comments">Additional comments (child seat, wheelchair, etc.)</string>
    <string name="kh_uisdk_address_drop_off">Drop off</string>
    <string name="kh_uisdk_address_pick_up">Pickup</string>
    <string name="kh_uisdk_address_picker_add_pickup">Add pickup</string>
    <string name="kh_uisdk_address_picker_destination_title">Destination</string>
    <string name="kh_uisdk_address_picker_dropoff_booking">Add destination</string>
    <string name="kh_uisdk_address_picker_enter_destination">Enter destination</string>
    <string name="kh_uisdk_address_picker_enter_pickup">Enter pickup location</string>
    <string name="kh_uisdk_address_picker_pickup_title">Pickup</string>
    <string name="kh_uisdk_address_picker_prebook">Book</string>
    <string name="kh_uisdk_adyen_payment_error_10">The shopper\'s bank does not support or does not allow this type of transaction</string>
    <string name="kh_uisdk_adyen_payment_error_11">3D Secure authentication was not executed, or it did not execute successfully</string>
    <string name="kh_uisdk_adyen_payment_error_12">The card does not have enough money to cover the payable amount</string>
    <string name="kh_uisdk_adyen_payment_error_14">Possible fraud.</string>
    <string name="kh_uisdk_adyen_payment_error_15">The transaction was cancelled.</string>
    <string name="kh_uisdk_adyen_payment_error_16">The shopper cancelled the transaction before completing it.</string>
    <string name="kh_uisdk_adyen_payment_error_17">The specified PIN is incorrect or invalid.</string>
    <string name="kh_uisdk_adyen_payment_error_18">The shopper specified an incorrect PIN more that three times in a row.</string>
    <string name="kh_uisdk_adyen_payment_error_19">It is not possible to validate the specified PIN number.</string>
    <string name="kh_uisdk_adyen_payment_error_2">The transaction was refused.</string>
    <string name="kh_uisdk_adyen_payment_error_20">The pre-authorisation risk checks resulted in a fraud score of 100 or more. Therefore, the transaction was flagged as fraudulent, and was refused.</string>
    <string name="kh_uisdk_adyen_payment_error_21">The transaction was not submitted correctly for processing.</string>
    <string name="kh_uisdk_adyen_payment_error_22">Pre-authorisation and post-authorisation risk checks resulted in a combined fraud score of 100 or higher, resulting in the transaction being refused and flagged as fraudulent.</string>
    <string name="kh_uisdk_adyen_payment_error_23">Transaction denied</string>
    <string name="kh_uisdk_adyen_payment_error_24">Invalid CVC (card security code).</string>
    <string name="kh_uisdk_adyen_payment_error_25">Restricted card</string>
    <string name="kh_uisdk_adyen_payment_error_26">Revocation of authorisation order</string>
    <string name="kh_uisdk_adyen_payment_error_27">Non-generic error</string>
    <string name="kh_uisdk_adyen_payment_error_28">The withdrawal amount permitted for the shopper\'s card has exceeded.</string>
    <string name="kh_uisdk_adyen_payment_error_29">The number of withdrawals permitted for the shopper\'s card has exceeded.</string>
    <string name="kh_uisdk_adyen_payment_error_3">Referrals</string>
    <string name="kh_uisdk_adyen_payment_error_31">Issuer reported transaction as suspected fraud.</string>
    <string name="kh_uisdk_adyen_payment_error_32">The address data the shopper entered is incorrect.</string>
    <string name="kh_uisdk_adyen_payment_error_33">The shopper\'s bank requires the shopper to enter an online PIN.</string>
    <string name="kh_uisdk_adyen_payment_error_34">The shopper\'s bank requires a checking account to complete the purchase.</string>
    <string name="kh_uisdk_adyen_payment_error_35">The shopper\'s bank requires a savings account to complete the purchase.</string>
    <string name="kh_uisdk_adyen_payment_error_36">The shopper\'s bank requires the shopper to enter a mobile PIN.</string>
    <string name="kh_uisdk_adyen_payment_error_37">The shopper abandoned the transaction after they attempted a contactless payment and were prompted to try a different card entry method (PIN or swipe).</string>
    <string name="kh_uisdk_adyen_payment_error_38">The issuer declined the authentication exemption request and requires authentication for the transaction. Please try again with 3D Secure.</string>
    <string name="kh_uisdk_adyen_payment_error_39">The issuer or the scheme wasn\'t able to communicate the outcome via RReq.</string>
    <string name="kh_uisdk_allocating_trip_one">Please wait while we allocate a driver</string>
    <string name="kh_uisdk_allocating_trip_two">This may take a moment or two</string>
    <string name="kh_uisdk_cancel_ride">Cancel ride</string>
    <string name="kh_uisdk_contact_driver">Contact driver</string>
    <string name="kh_uisdk_contact_fleet">Contact ride provider</string>
    <string name="kh_uisdk_email_hint">Email</string>
    <string name="kh_uisdk_fees_and_taxes_included">Taxes and fees included</string>
    <string name="kh_uisdk_filter">Filter</string>
    <string name="kh_uisdk_finding_your_ride">Finding your ride...</string>
    <string name="kh_uisdk_first_name_hint">First name</string>
    <string name="kh_uisdk_last_name_hint">Last name</string>
    <string name="kh_uisdk_loyalty_info">We need your card to authorise this transaction, just in case the final ride cost exceeds your points balance. Your account won’t be charged if your Reward points cover the cost of the ride.</string>
    <string name="kh_uisdk_loyalty_points_earned_for_trip">%1$s Reward points will be added to your balance at the end of this ride</string>
    <string name="kh_uisdk_loyalty_title">Reward points</string>
    <string name="kh_uisdk_mobile_phone_number_hint">Mobile phone number</string>
    <string name="kh_uisdk_passenger_details">Passenger details</string>
    <string name="kh_uisdk_retrieving_quotes">Retrieving quotes</string>
    <string name="kh_uisdk_sort_by">Sort by</string>
</resources>