<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:layout_marginStart="@dimen/kh_uisdk_spacing_xxsmall"
        android:layout_marginEnd="@dimen/kh_uisdk_spacing_xxsmall"
        android:orientation="vertical"/>
    
    <Button
        android:id="@+id/cancelButton"
        style="@style/Text.Action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/kh_uisdk_spacing_xsmall"
        android:text="@string/kh_uisdk_cancel_ride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/contactFleetButton"
        style="@style/Text.Action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kh_uisdk_contact_fleet"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/contactDriverButton"
        style="@style/Text.Action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kh_uisdk_contact_driver"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>