<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/uisdk_request_map_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/requestingProgressBar"
        android:layout_width="@dimen/allocation_wdith"
        android:layout_height="@dimen/allocation_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/uisdk_custom_progressbar_requesting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findingYourTripLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:text="@string/kh_uisdk_finding_your_ride"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_xxlarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allocationOneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/spacing_small"
        android:paddingRight="@dimen/spacing_small"
        android:text="@string/kh_uisdk_allocating_trip_one"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findingYourTripLabel" />

    <TextView
        android:id="@+id/allocationTwoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/spacing_small"
        android:paddingRight="@dimen/spacing_small"
        android:text="@string/kh_uisdk_allocating_trip_two"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_medium"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findingYourTripLabel" />

    <com.karhoo.uisdk.screen.booking.checkout.tripallocation.CancelButton
        android:id="@+id/cancelButton"
        android:layout_width="@dimen/allocation_cancel_width"
        android:layout_height="@dimen/allocation_cancel_height"
        android:layout_below="@+id/requestingProgressBar"
        android:layout_marginTop="@dimen/allocation_top_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestingProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>