<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/passengerViewTitle"
            style="@style/KhPassengerViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kh_uisdk_passenger_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_grid_first_column"
            android:hint="@string/kh_uisdk_first_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passengerViewTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:hint="@string/kh_uisdk_last_name_hint"
            android:paddingTop="@dimen/spacing_xsmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:hint="@string/kh_uisdk_email_hint"
            android:paddingTop="@dimen/spacing_xsmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/mobileNumberParentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <FrameLayout
                android:layout_width="@dimen/spacing_none"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_xxxsmall"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xxxsmall"
                    android:layout_marginTop="@dimen/passenger_margin_top"
                    android:text="@string/kh_uisdk_code"
                    android:textColor="@color/med_grey" />

                <com.karhoo.uisdk.base.view.countrycodes.CountryCodeSpinner
                    android:id="@+id/countryCodeSpinner"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:backgroundTint="@color/med_grey"
                    android:paddingTop="@dimen/spacing_xsmall"
                    android:spinnerMode="dropdown" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.7">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNumberLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:paddingStart="@dimen/spacing_xxsmall"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumberInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kh_uisdk_mobile_phone_number_hint"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/updateUserDetailsProgressBar"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xsmall"
            android:layout_marginEnd="@dimen/spacing_xsmall"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/updatePassengerDetailsMask"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="@dimen/spacing_none"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
