<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="@color/kh_uisdk_background_primary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/kh_uisdk_loyaltyViewBalance_marginTop"
        >

        <TextView
            android:id="@+id/loyaltyViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/KhLoyaltyBalanceView"
            android:layout_gravity="end"
            android:paddingTop="@dimen/kh_uisdk_loyaltyViewBalance_paddingTop"
            android:paddingBottom="@dimen/kh_uisdk_loyaltyViewBalance_paddingTop"
            android:paddingEnd="@dimen/kh_uisdk_loyaltyViewBalance_paddingStart"
            android:paddingStart="@dimen/kh_uisdk_loyaltyViewBalance_paddingStart"
            android:translationY="@dimen/kh_uisdk_loyaltyViewBalance_translationY"
            android:translationZ="@dimen/kh_uisdk_loyaltyViewBalance_translationZ"
            android:visibility="invisible"
            />

        <LinearLayout
            android:id="@+id/loyaltyViewLayout"
            style="@style/KhLoyaltyLayoutView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/kh_uisdk_spacing_small_intermediate"
            android:paddingTop="@dimen/kh_uisdk_padding_default"
            android:paddingEnd="@dimen/kh_uisdk_spacing_small_intermediate"
            android:paddingBottom="@dimen/kh_uisdk_padding_default">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loyaltyViewTitle"
                    style="@style/KhLoyaltyTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kh_uisdk_loyalty_title"
                    tools:text="@string/kh_uisdk_loyalty_title" />

                <TextView
                    android:id="@+id/loyaltyViewSubtitle"
                    style="@style/KhLoyaltySubtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kh_uisdk_loyalty_points_earned_for_trip"
                    tools:text="@string/kh_uisdk_loyalty_points_earned_for_trip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kh_uisdk_margin_small"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/loyaltySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false" />

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:id="@+id/loyaltyInfoLayout"
        style="@style/KhBookingPriceInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/loyaltyInfoText"
            style="@style/KhLoyaltyInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/kh_uisdk_spacing_xxsmall"
            android:layout_marginEnd="@dimen/kh_uisdk_spacing_small"
            android:text="@string/kh_uisdk_loyalty_info" />
    </LinearLayout>
</LinearLayout>
